Fixed a bug with special characters info bar getting squashed on mobiles.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-special-characters/specialcharacters.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-special-characters/specialcharacters.css
@@ -72,6 +72,7 @@
 
 		& > .ck-character-info {
 			grid-area: 3 / 1 / 4 / 2;
+			max-width: unset;
 		}
 	}
 }
